[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/managers/structure_tile_tooltip_mgr.gd" type="Script" id=1]

[node name="StructureTileTooltipMgr" type="Node2D"]
script = ExtResource( 1 )

[node name="TooltipWaitTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="TooltipWaitTimer" to="." method="_on_TooltipWaitTimer_timeout"]
